# nsgt-3

./: .gitignore  nsgt-v2.ipynb  nsgt.ipynb  nsgt_v3.ipynb  pyproject.toml  requirements.txt  reverse_engineer.ipynb
edited/: noise_speech.tiff  quack.tiff  speech_phase.tiff  violin_phase_swap.tiff
src/: GaborSystem.py  NSGData.py  codec.py  frame.py  interaural.py  nsgt.py  scales.py
